<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">
    <TextView
        android:id="@+id/toolbar_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/toolbar"
        android:text="@string/routeappone"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:gravity="left"
        android:fontFamily="sans-serif-medium"
        android:padding="10dp"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/android_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/android_image"
                android:contentDescription="@string/android_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingVertical="10dp"
                />
            <Button
                android:id="@+id/android_course_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/android_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/button_bg"
                android:text="@string/android_course"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                />
            <ImageView
                android:id="@+id/ios_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ios_image"
                android:contentDescription="@string/ios_image"
                app:layout_constraintTop_toBottomOf="@id/android_course_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingVertical="10dp"
                />
            <Button
                android:id="@+id/ios_course_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ios_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/button_bg"
                android:text="@string/ios_course"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                />
            <ImageView
                android:id="@+id/fullstack_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fullstack_image"
                android:contentDescription="@string/fullstack_image"
                app:layout_constraintTop_toBottomOf="@id/ios_course_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingVertical="10dp"
                />
            <Button
                android:id="@+id/fullstack_course_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fullstack_image_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/button_bg"
                android:text="@string/fullstack_course"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
